Fixed an issue with the login and register modals not scrolling on mobile devices with smaller screens. The links between the login and register modals have been moved to the main section of the modal instead of the footer. The page also had duplicate IDs as the login and register modal reused elements, this has been fixed.

--- a/landing/main.css
+++ b/landing/main.css
@@ -36,6 +36,14 @@ body, html {
   color: white;
 }
 
+.modal {
+  overflow-y: auto;
+}
+
+.modal-link-text {
+  padding-left: 0;
+}
+
 #background-animation {
   width: 100%;
   height: 100%;
